        Reported by Phil Dunks.
      - Fixed NIO connector regression potentially blocking a connection if 
        all the entity couldn't be read from the socket in one shot.
     - Misc
      - If the Engine#logFormatter is set to null, the log formatter of the
        console is not changed anymore.
      - Updated Jackson library to version 1.7.1.

- 2.1 Milestone 2 (12/24/2010)
    - API changes
      - The org.restlet.service.TaskService is now a ScheduledExecutorService
        capable of running delayed commands at fixed intervals for example.
        Suggested by Kristoffer Gronowski.
      - JsonRepresentation(Map<Object,Object>) signature changed to the more
        precise JsonRepresentation(Map<String, Object) one.
        Suggested by Tim Peierls.
      - Facilitating the creation of ClientResource subclasses by changing
        the visibility of handle(...) methods from private to protected.
        Leveraged by the SipClientResource in the SIP extension.
        Reported by Phil Dunks.
    - Enhancements
      - Added Request#loggable property, LogService#isLoggable(Request)
        method and LogService#loggableTemplate to enable selective request 
        logging. Suggested by John Logdson.
      - Added setters with String parameters in addition to Text ones to
        the Feed and Entry classes.
      - Added an EncoderService to automatically compress sent entities
        on both client and server side. Disabled by default on Application.
      - Added UniformResource#requestCacheDirectives and 
        responseCacheDirectives properties.
      - Added UniformResource#doError(Status) and doError(Status, msg)
        methods to allow interception and customization of the default
        behavior (such as throwing a ResourceException on the client-side).
        Suggested by Florian Bucklers.
      - Added a new SIP extension providing support for the Session 
        Initiation Protocol, largely used for voice over IP. This new